--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@chec/commerce.js": "^2.3.2",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@stripe/react-stripe-js": "^1.4.0",
     "@stripe/stripe-js": "^1.13.1",
     "@testing-library/jest-dom": "^5.11.9",
